2018-01-11  Kirill Müller  <krlmlr@mailbox.org>

        * inst/include/Rcpp/traits/is_na.h: Speed up Rcpp::is_na<double>()
        (pull request #799)

2018-01-09  Iñaki Ucar  <i.ucar86@gmail.com>

        * inst/include/Rcpp/vector/proxy.h: Improve support for NVCC, the CUDA
        compiler (pull request #798, fixed issue #797)

2018-01-06  Kendon Bell  <kmb56@berkeley.edu>

        * src/api.cpp: Allow for compilation on ANDROID

2017-12-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Updated minor version and date

2017-12-21  Kirill Müller  <krlmlr@mailbox.org>

        * inst/include/Rcpp/internal/wrap.h: Appease gcc-7 with fall-through
        * inst/include/Rcpp/macros/unroll.h: Idem

2017-12-20  Kirill Müller  <krlmlr@mailbox.org>

        * inst/include/Rcpp/utils/tinyformat.h: Update to new upstream
        c42f/tinyformat@8f60162, simplify future updates by separating
        Rcpp-specific changes (issue #786).

2017-12-19  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/internal/na.h: Remove 'clever' NA / NaN checks

2017-12-16  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Updated minor version and date

2017-12-13  Lionel Henry  <lionel@rstudio.com>

        * inst/include/Rcpp/api/meat/Rcpp_eval.h: Add Rcpp_fast_eval() for safe
        and fast evaluation of R code using the new protect-unwind API in R 3.5.
        Unlike Rcpp_eval(), this does not evaluate R code within tryCatch() in
        order to avoid the catching overhead. R longjumps are now correctly
        intercepted and rethrown. Following this change the C++ stack is now
        safely unwound when a longjump is detected while calling into R code.
        This includes the following cases: caught condition of any class, long
        return, restart jump, debugger exit.

        Rcpp_eval() also uses the protect-unwind API in order to gain safety.